--- a/index.html
+++ b/index.html
@@ -1,19 +1,234 @@
-<html>
+<!DOCTYPE html>
+<html lang="id">
 <head>
-<title>Homepag saya</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Jesika Yusnita Laoly</title>
+    <style>
+        /* HEADER */
+        header {
+            background-color: #00BFFF;
+            color: white;
+            padding: 20px 10px;
+            text-align: center;
+            animation: slideDown 1s ease-out;
+        }
+
+        @keyframes slideDown {
+            from { transform: translateY(-100px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+
+        header img {
+            height: 50px;
+        }
+
+        header nav ul {
+            padding: 0;
+            list-style: none;
+        }
+
+        header nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease-in-out;
+        }
+
+        header nav ul li a:hover {
+            color: #FFD700;
+        }
+
+        /* ANIMASI FADE-IN */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 1s ease-out, transform 1s ease-out;
+        }
+
+        .visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* SECTION "TENTANG SAYA" */
+        .about {
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+            background: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .about h2 {
+            color: #00BFFF;
+        }
+
+        .about p {
+            font-size: 16px;
+            line-height: 1.6;
+        }
+
+        /* REKOMENDASI BUKU */
+        .rekomendasi {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .buku-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .buku {
+            width: 220px;
+            padding: 10px;
+            background: white;
+            border-radius: 10px;
+            text-align: center;
+            transition: transform 0.3s ease-in-out;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+
+        .buku:hover {
+            transform: scale(1.05);
+        }
+
+        .buku img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+
+        .buku p {
+            font-size: 14px;
+            font-weight: bold;
+            margin: 10px 0;
+        }
+
+        .buku a {
+            display: block;
+            margin-top: 5px;
+            padding: 8px;
+            background: #00BFFF;
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .buku a:hover {
+            background: #005f9e;
+        }
+
+        /* FOOTER */
+        footer {
+            background-color: #00BFFF;
+            color: white;
+            padding: 20px 10px;
+            text-align: center;
+            animation: fadeIn 2s ease-in;
+            margin-top: 20px;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+    </style>
 </head>
 <body>
-<h1>Perpustakaan Jesika Yusnita Laoly</h1>
-<h2>About Me</h2>
-<p>Selamat datang di perpustakaan Jesika Yusnita Laoly adalah
-<i>homepage</i>
-<b>pertama</b> saya, karena saya baru belajar tentang
-cara membuat <b><i>homepage</i></b>.
-</p>
+
+<header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
+    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- TENTANG SAYA -->
+<div class="about fade-in">
+    <h2>Tentang Saya</h2>
+    <p>Selamat datang di perpustakaan digital saya! Website ini adalah tempat saya mengarsipkan berbagai koleksi tulisan, artikel, dan referensi yang bermanfaat bagi siapa saja yang mencintai ilmu dan wawasan baru.</p>
+</div>
+
+<!-- REKOMENDASI BUKU -->
+<div class="rekomendasi fade-in">
+    <h3>Rekomendasi Buku</h3>
+    
+    <div class="buku-container">
+        <div class="buku">
+            <img src="https://i.imgur.com/x3IigYG.jpg" alt="Buku 1">
+            <p>Know Can Do!: Put Your Know-How Into Action</p>
+            <a href="https://drive.google.com/file/d/1D16EtsVGXx-BYGFWCgQeESk1_AsX09zb/view?usp=drivesdk" target="_blank">Download File</a>
+        </div>
+        <div class="buku">
+            <img src="https://i.imgur.com/wRDhdzT.jpg" alt="Buku 2">
+            <p>That Will Never Work</p>
+            <a href="https://drive.google.com/file/d/1DacSCJrGrmvP7aV2sDp6Pa9OcCg1FCgI/view?usp=drivesdk" target="_blank">Download File</a>
+        </div>
+        <div class="buku">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1742386051/Screenshot_20250319_175543_Drive_tzjdda.jpg" alt="Buku 3">
+            <p>Win Keep Grow</p>
+            <a href="https://drive.google.com/file/d/1Cpro2nn5B5EAXl4nLXLR0EmNseQapDa-/view?usp=drivesdk" target="_blank">Download File</a>
+        </div>
+        <div class="buku">
+    <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1742385759/f06728e1142316050b905c4ff9f6d1b3_zxmm6d.jpg" alt="Buku 4">
+    <p>The 7 Habits of Highly Effective People</p>
+    <a href="https://drive.google.com/file/d/1DLbGvHQ8Ct_qASE8yXmnI2rexZwxHOo7/view?usp=drivesdk" target="_blank">Download File</a>
+</div>
+<div class="buku">
+    <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1742385826/83bec07a6da897d33a5e874aee41aa74_lkp4tq.jpg" alt="Buku 5">
+    <p>Sales Management Simplified</p>
+    <a href="https://drive.google.com/file/d/1DLbGvHQ8Ct_qASE8yXmnI2rexZwxHOo7/view?usp=drivesdk" target="_blank">Download File</a>
+</div>
+<div class="buku">
+    <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1742386298/Screenshot_20250319_142334_Gallery_1_gcrn9l.jpg" alt="Buku 6">
+    <p>The Art of Strategy: A Game Theorist's Guide to Success in Business & Life</p>
+    <a href="https://drive.google.com/file/d/1DIn4v2DVqDTlI4bV-3NfUH-P7FMWqvt5/view?usp=drivesdk" target="_blank">Download File</a>
+</div>
+<div class="buku">
+    <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1742386478/Screenshot_20250319_142352_Gallery_1_suwlfb.jpg" alt="Buku 7">
+    <p>Master Mentors: 30 Transformative Insights from Our Greatest Minds</p>
+    <a href="https://drive.google.com/file/d/1CudR0cpOFyEZT6oVyc0f7oYCv435kzzq/view?usp=drivesdk" target="_blank">Download File</a>
+</div>
+<div class="buku">
+    <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1742386915/Screenshot_20250319_192026_Drive_cq8kl2.jpg" alt="Buku 8">
+    <p>Get it Done: Surprising Lessons from the Science of Motivation</p>
+    <a href="https://drive.google.com/file/d/1FHRw0bYtWv5m9MWm30HND1G7DAwZYsMY/view?usp=drivesdk" target="_blank">Download File</a>
+</div>
+</div>
+    
+<footer>
+    <p>&copy; 2025 All rights reserved</p>
+</footer>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        let elements = document.querySelectorAll(".fade-in");
+        elements.forEach((element, index) => {
+            setTimeout(() => {
+                element.classList.add("visible");
+            }, index * 300);
+        });
+    });
+</script>
+
 </body>
-</html> <!-- akhir dokumen HTML-->
-<h3>Kerja sama perpustakaan lain</h3>
-<a href="hhttps://www.perpusnas.go.id/">Perpustakaan Nasional Republik Indonesia(Perpusnas)</a)<ul>
-    <li><a href="index.html">Homepage</a></li>
-    <li><a href="aboutme.html">About Me</a></li>
-</ul>
+</html>
