--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,155 @@
-<html>
-    <head>
-    <head><title>Contact Us</title></head>
-    </head> 
-<body> 
-<p>Jika kamu memiliki pertanyaan, masukan, atau ingin tahu lebih lanjut, jangan ragu menghubungi kami. Silahkan isi formular di Bawah ini dan tim kami akan segera merespon.</p>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - Perpustakaan Jesika</title>
+    <style>
+        /* HEADER */
+        header {
+            background-color: #00BFFF;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            animation: slideDown 1s ease-out;
+        }
 
+        @keyframes slideDown {
+            from { transform: translateY(-100px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
 
-<form action="contact.php" method="GET">
-    <!-- letakkan field di sini -->
-<fieldset>
-<legend><h1><b>Contact Us</b></h1></legend>
+        header img {
+            height: 50px;
+        }
 
-    <tr>
-    <label> Nama: </label>
-    <input type="text" name="nama-lengkap" /><br/></td>
-    </tr>
-<p>
+        header nav ul {
+            padding: 0;
+            list-style: none;
+        }
 
-    <tr>
-    <label> Email: </label>
-    <input type="email" name="email" /><br />
-    </tr>
-<p>
+        header nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
 
+        header nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease-in-out;
+        }
 
-    <tr>
-<form action="prosess-form.php" method="GET">
-    <!-- letakkan field di sini -->
-    <label> Isi Komentar: </label>
-    <textarea name="komentar" rows="4" cols="50" ></textarea>    <br /><br />
-    </tr>
+        header nav ul li a:hover {
+            color: #FFD700;
+        }
 
-<td><input type="submit" name="submit" value="Submit" value="Send"/></td>
-        <td></td>
-        <td></td>
+        /* CONTAINER */
+        .container {
+            max-width: 700px;
+            margin: 40px auto;
+            padding: 20px;
+            text-align: center;
+        }
 
-    
-    <p>Halaman Lainnya</p>
-    
-<ul>
-    <li><a href="index.html">Homepage</a></li>
-    <li><a href="About.html">About Me</a></li>
-</ul>
+        /* FORM CARD */
+        .contact-card {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            animation: fadeIn 1s ease-in;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .contact-card h2 {
+            color: #00BFFF;
+            margin-bottom: 10px;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            transition: 0.3s;
+        }
+
+        input:focus, textarea:focus {
+            border-color: #00BFFF;
+            outline: none;
+            box-shadow: 0 0 10px rgba(0,191,255,0.3);
+        }
+
+        button {
+            background-color: #00BFFF;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease-in-out, transform 0.2s;
+        }
+
+        button:hover {
+            background-color: #008CBA;
+            transform: scale(1.05);
+        }
+
+        /* FOOTER */
+        footer {
+            background-color: #00BFFF;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            margin-top: 20px;
+            animation: fadeIn 2s ease-in;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/800px-Logo_of_North_Sumatra_University.svg.png" alt="Logo Website">
+    <h1>Perpustakaan Jesika Yusnita Laoly</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Homepage</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- CONTACT US SECTION -->
+<div class="container">
+    <div class="contact-card">
+        <h2>Hubungi Kami</h2>
+        <p>Jika kamu memiliki pertanyaan, masukan, atau ingin tahu lebih lanjut, silakan isi formulir di bawah ini.</p>
+
+        <form action="contact.php" method="GET">
+            <label>Nama:</label>
+            <input type="text" name="nama-lengkap" required />
+
+            <label>Email:</label>
+            <input type="email" name="email" required />
+
+            <label>Isi Komentar:</label>
+            <textarea name="komentar" rows="4" required></textarea>
+
+            <button type="submit" onclick="alert('Terima kasih! Kami akan segera menghubungi Anda.')">Submit</button>
+        </form>
+    </div>
+</div>
+
+<footer>
+    <p>&copy; 2025 All rights reserved</p>
+</footer>
+
+</body>
+</html>
