--- a/About.html
+++ b/About.html
@@ -5,12 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Jesika Yusnita Laoly</title>
     <style>
+        /* IMPORT GOOGLE FONT */
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+        
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body {
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+
         /* HEADER */
         header {
-            background-color: #00BFFF;
+            background: linear-gradient(135deg, #00BFFF, #0066FF);
             color: white;
             padding: 20px;
             text-align: center;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
             animation: slideDown 1s ease-out;
         }
 
@@ -23,31 +44,34 @@
             height: 50px;
         }
 
-        header nav ul {
-            padding: 0;
+        nav ul {
             list-style: none;
+            padding: 0;
+            margin-top: 10px;
         }
 
-        header nav ul li {
+        nav ul li {
             display: inline;
-            margin: 0 10px;
+            margin: 0 15px;
         }
 
-        header nav ul li a {
+        nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: bold;
-            transition: color 0.3s ease-in-out;
+            font-size: 18px;
+            transition: 0.3s;
         }
 
-        header nav ul li a:hover {
+        nav ul li a:hover {
             color: #FFD700;
+            text-shadow: 0 0 10px rgba(255, 215, 0, 0.8);
         }
 
         /* CONTAINER */
         .container {
             max-width: 800px;
-            margin: 40px auto;
+            margin: 100px auto 40px;
             padding: 20px;
             text-align: center;
         }
@@ -56,9 +80,14 @@
         .profile-card {
             background: white;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             animation: fadeIn 1s ease-in;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .profile-card:hover {
+            transform: scale(1.05);
         }
 
         @keyframes fadeIn {
@@ -67,16 +96,21 @@
         }
 
         .profile-card img {
-            width: 120px;
-            height: 120px;
+            width: 140px;
+            height: 140px;
             border-radius: 50%;
             object-fit: cover;
-            border: 4px solid #00BFFF;
+            border: 5px solid #00BFFF;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .profile-card img:hover {
+            transform: rotate(10deg);
         }
 
         .profile-card h2 {
             color: #00BFFF;
-            margin: 10px 0;
+            margin: 15px 0;
         }
 
         /* TABLE STYLE */
@@ -85,27 +119,36 @@
             border-collapse: collapse;
             width: 100%;
             max-width: 500px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            overflow: hidden;
+            animation: fadeIn 1.5s ease-in;
         }
 
         .bio-table, .bio-table th, .bio-table td {
             border: 1px solid #ddd;
-            padding: 10px;
+            padding: 12px;
             text-align: left;
         }
 
         .bio-table th {
             background-color: #00BFFF;
             color: white;
+            font-weight: bold;
+        }
+
+        .bio-table tr:nth-child(even) {
+            background-color: #f9f9f9;
         }
 
         /* FOOTER */
         footer {
-            background-color: #00BFFF;
+            background: linear-gradient(135deg, #00BFFF, #0066FF);
             color: white;
-            padding: 20px;
+            padding: 15px;
             text-align: center;
-            margin-top: 20px;
+            margin-top: 40px;
+            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
             animation: fadeIn 2s ease-in;
         }
     </style>
@@ -124,7 +167,6 @@
     </nav>
 </header>
 
-<!-- ABOUT ME SECTION -->
 <div class="container">
     <div class="profile-card">
         <img src="https://lh3.googleusercontent.com/d/1EeQkvDIAx2DbhOTeuGk842MkT-wUy4k5" alt="Foto Profil"> 
@@ -134,34 +176,13 @@
 
     <h3>Biodata</h3>
     <table class="bio-table">
-        <tr>
-            <th>Informasi</th>
-            <th>Detail</th>
-        </tr>
-        <tr>
-            <td>Nama</td>
-            <td>Jesika Yusnita Laoly</td>
-        </tr>
-        <tr>
-            <td>NIM</td>
-            <td>220709064</td>
-        </tr>
-        <tr>
-            <td>Jurusan</td>
-            <td>Perpustakaan dan Sains Informasi</td>
-        </tr>
-        <tr>
-            <td>Fakultas</td>
-            <td>Ilmu Budaya</td>
-        </tr>
-        <tr>
-            <td>Perguruan Tinggi</td>
-            <td>Universitas Sumatera Utara</td>
-        </tr>
-        <tr>
-            <td>E-mail</td>
-            <td>jesikalaolay19@gmail.com</td>
-        </tr>
+        <tr><th>Informasi</th><th>Detail</th></tr>
+        <tr><td>Nama</td><td>Jesika Yusnita Laoly</td></tr>
+        <tr><td>NIM</td><td>220709064</td></tr>
+        <tr><td>Jurusan</td><td>Perpustakaan dan Sains Informasi</td></tr>
+        <tr><td>Fakultas</td><td>Ilmu Budaya</td></tr>
+        <tr><td>Perguruan Tinggi</td><td>Universitas Sumatera Utara</td></tr>
+        <tr><td>E-mail</td><td>jesikalaolay19@gmail.com</td></tr>
     </table>
 </div>
 
