--- a/index.html
+++ b/index.html
@@ -214,7 +214,33 @@
     <a href="https://drive.google.com/file/d/1FHRw0bYtWv5m9MWm30HND1G7DAwZYsMY/view?usp=drivesdk" target="_blank">Download File</a>
 </div>
 </div>
-    
+    <!-- EVENT TERKINI -->
+<div class="rekomendasi fade-in">
+    <h3>Event Terkini</h3>
+    <div class="buku-container">
+        <div class="buku">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1745995066/Screenshot_20250430_133117_Instagram_oco6i3.jpg" alt="Event 1">
+            <p>Event: Diskusi Buku dan Literasi</p>
+            <a href="https://www.instagram.com/p/DIssMeTTraB/?igsh=MW14ZWxjNWlrNW44Mw==" target="_blank">Lihat di Instagram</a>
+        </div>
+        <div class="buku">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1745995155/Screenshot_20250430_133144_Instagram_xggjn8.jpg" alt="Event 2">
+            <p>Event: Pameran Arsip Digital</p>
+            <a href="https://www.instagram.com/p/C6p49L_v_4S/?igsh=MjZicXhzOHV3Mnph" target="_blank">Lihat di Instagram</a>
+        </div>
+        <div class="buku">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1745995218/Screenshot_20250430_133135_Instagram_nzebq9.jpg" alt="Event 3">
+            <p>Event: Pelatihan Referensi Online</p>
+            <a href="https://www.instagram.com/p/DGAhU6RStTM/?igsh=MmJlenF3OWI5cWhp" target="_blank">Lihat di Instagram</a>
+        </div>
+        <div class="buku">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1745995257/Screenshot_20250430_133309_Instagram_ozr1wg.jpg" alt="Event 4">
+            <p>Event: Bedah Buku & Diskusi Publik</p>
+            <a href="https://www.instagram.com/p/DHm92RqSPgu/?igsh=MTJnMHl3c2g4ZTBkdw==" target="_blank">Lihat di Instagram</a>
+        </div>
+    </div>
+</div>
+
 <footer>
     <p>&copy; 2025 All rights reserved</p>
 </footer>
