--- a/index.html
+++ b/index.html
@@ -240,6 +240,35 @@
         </div>
     </div>
 </div>
+    <!-- TABEL PERKALIAN 10 x 10 -->
+<div class="about fade-in">
+    <h2>Tabel Perkalian 10 x 10</h2>
+    <table border="1" cellpadding="10" style="margin: auto; border-collapse: collapse;">
+        <thead>
+            <tr>
+                <th>*</th>
+                <!-- Header Kolom -->
+                <script>
+                    for (let i = 1; i <= 10; i++) {
+                        document.write(`<th>${i}</th>`);
+                    }
+                </script>
+            </tr>
+        </thead>
+        <tbody>
+            <script>
+                for (let i = 1; i <= 10; i++) {
+                    document.write('<tr>');
+                    document.write(`<th>${i}</th>`);
+                    for (let j = 1; j <= 10; j++) {
+                        document.write(`<td>${i * j}</td>`);
+                    }
+                    document.write('</tr>');
+                }
+            </script>
+        </tbody>
+    </table>
+</div>
 
 <footer>
     <p>&copy; 2025 All rights reserved</p>
