--- a/contact.html
+++ b/contact.html
@@ -5,32 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Perpustakaan Jesika</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
-        
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-
         /* HEADER */
         header {
-            background: linear-gradient(135deg, #00BFFF, #0066FF);
+            background-color: #00BFFF;
             color: white;
             padding: 20px;
             text-align: center;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
             animation: slideDown 1s ease-out;
         }
 
@@ -43,50 +23,42 @@
             height: 50px;
         }
 
-        nav ul {
-            list-style: none;
+        header nav ul {
             padding: 0;
-            margin-top: 10px;
+            list-style: none;
         }
 
-        nav ul li {
+        header nav ul li {
             display: inline;
-            margin: 0 15px;
+            margin: 0 10px;
         }
 
-        nav ul li a {
+        header nav ul li a {
             color: white;
             text-decoration: none;
             font-weight: bold;
-            font-size: 18px;
-            transition: 0.3s;
+            transition: color 0.3s ease-in-out;
         }
 
-        nav ul li a:hover {
+        header nav ul li a:hover {
             color: #FFD700;
-            text-shadow: 0 0 10px rgba(255, 215, 0, 0.8);
         }
 
         /* CONTAINER */
         .container {
             max-width: 700px;
-            margin: 100px auto 40px;
+            margin: 40px auto;
             padding: 20px;
             text-align: center;
         }
 
-        /* CONTACT FORM */
+        /* FORM CARD */
         .contact-card {
             background: white;
             padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
             animation: fadeIn 1s ease-in;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .contact-card:hover {
-            transform: scale(1.05);
         }
 
         @keyframes fadeIn {
@@ -101,12 +73,11 @@
 
         input, textarea {
             width: 100%;
-            padding: 12px;
+            padding: 10px;
             margin: 10px 0;
             border-radius: 5px;
             border: 1px solid #ccc;
             transition: 0.3s;
-            font-size: 16px;
         }
 
         input:focus, textarea:focus {
@@ -118,11 +89,10 @@
         button {
             background-color: #00BFFF;
             color: white;
-            padding: 12px 20px;
+            padding: 10px 20px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
             transition: background-color 0.3s ease-in-out, transform 0.2s;
         }
 
@@ -133,12 +103,11 @@
 
         /* FOOTER */
         footer {
-            background: linear-gradient(135deg, #00BFFF, #0066FF);
+            background-color: #00BFFF;
             color: white;
-            padding: 15px;
+            padding: 20px;
             text-align: center;
-            margin-top: 40px;
-            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+            margin-top: 20px;
             animation: fadeIn 2s ease-in;
         }
     </style>
@@ -157,12 +126,13 @@
     </nav>
 </header>
 
+<!-- CONTACT US SECTION -->
 <div class="container">
     <div class="contact-card">
         <h2>Hubungi Kami</h2>
         <p>Jika kamu memiliki pertanyaan, masukan, atau ingin tahu lebih lanjut, silakan isi formulir di bawah ini.</p>
 
-        <form action="contact.php" method="POST">
+        <form action="contact.php" method="GET">
             <label>Nama:</label>
             <input type="text" name="nama-lengkap" required />
 
