--- a/index.html
+++ b/index.html
@@ -302,13 +302,17 @@
         transition: background-color 0.3s ease;
     }
 </style>
-<!-- VIDEO DENGAN ANIMASI -->
+<!-- VIDEO YOUTUBE DENGAN ANIMASI -->
 <div class="video-container fade-in-zoom" style="margin-top: 60px; text-align: center;">
     <h2 style="font-size: 28px; margin-bottom: 20px;">Tonton Video Pembelajaran</h2>
-    <video controls width="640" height="360" style="border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
-        <source src="video/perkalian.mp4" type="video/mp4">
-        Browser Anda tidak mendukung pemutaran video.
-    </video>
+    <iframe width="640" height="360" 
+        src="https://www.youtube.com/embed/a2i7oRG9rvE" 
+        title="Video Pembelajaran" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen
+        style="border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.2);">
+    </iframe>
 </div>
 
 <!-- CSS untuk animasi -->
