Update and rename tabel.php to tabel.html

--- a/tabel.html
+++ b/tabel.html
@@ -65,39 +65,52 @@
         <ul>
             <li><a href="index.html">Beranda</a></li>
             <li><a href="profil.html">Profil</a></li>
-            <li><a href="tabel.php">Tabel</a></li>
+            <li><a href="tabel.html">Tabel</a></li>
         </ul>
     </nav>
 
-    <!-- Judul -->
     <h2>Tabel Perkalian 10 x 10</h2>
 
-    <!-- Tabel -->
-    <table>
+    <table id="perkalian">
         <thead>
             <tr>
                 <th>*</th>
-                <?php
-                    for ($i = 1; $i <= 10; $i++) {
-                        echo "<th>$i</th>";
-                    }
-                ?>
+                <!-- Kolom Header 1-10 -->
             </tr>
         </thead>
         <tbody>
-            <?php
-                for ($i = 1; $i <= 10; $i++) {
-                    echo "<tr>";
-                    echo "<th>$i</th>";
-                    for ($j = 1; $j <= 10; $j++) {
-                        $hasil = $i * $j;
-                        echo "<td>$hasil</td>";
-                    }
-                    echo "</tr>";
-                }
-            ?>
+            <!-- Baris akan diisi oleh JavaScript -->
         </tbody>
     </table>
+
+    <script>
+        const table = document.getElementById('perkalian');
+        const theadRow = table.querySelector('thead tr');
+
+        // Tambah header kolom 1-10
+        for (let i = 1; i <= 10; i++) {
+            const th = document.createElement('th');
+            th.textContent = i;
+            theadRow.appendChild(th);
+        }
+
+        // Tambah isi tabel
+        const tbody = table.querySelector('tbody');
+        for (let i = 1; i <= 10; i++) {
+            const row = document.createElement('tr');
+            const th = document.createElement('th');
+            th.textContent = i;
+            row.appendChild(th);
+
+            for (let j = 1; j <= 10; j++) {
+                const td = document.createElement('td');
+                td.textContent = i * j;
+                row.appendChild(td);
+            }
+
+            tbody.appendChild(row);
+        }
+    </script>
 
 </body>
 </html>
