--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             <li><a href="index.html">Homepage</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="http://localhost/tabel.php">PHP</a></li>
         </ul>
     </nav>
 </header>
