--- a/index.html
+++ b/index.html
@@ -331,7 +331,48 @@
         }
     }
 </style>
-    
+    <!-- REKOMENDASI PLAYLIST -->
+<div class="playlist-section">
+  <h2>🎶 Rekomendasi Playlist Spotify</h2>
+
+  <div class="playlist-list">
+    <iframe style="border-radius:12px" 
+      src="https://open.spotify.com/embed/playlist/1VT1PxuIbvUb7bhqcZWIYi?utm_source=generator" 
+      width="100%" height="380" frameborder="0" allowfullscreen 
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+    </iframe>
+
+    <iframe style="border-radius:12px" 
+      src="https://open.spotify.com/embed/playlist/34m80HNe2SWDc7hAGvj7rd?utm_source=generator" 
+      width="100%" height="380" frameborder="0" allowfullscreen 
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+    </iframe>
+  </div>
+</div>
+
+<!-- CSS untuk mempercantik -->
+<style>
+  .playlist-section {
+    margin: 60px auto;
+    padding: 30px;
+    background-color: #fff0f5;
+    border-radius: 16px;
+    width: 90%;
+    max-width: 800px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+
+  .playlist-section h2 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 25px;
+  }
+
+  .playlist-list iframe {
+    margin-bottom: 30px;
+  }
+</style>
 <footer>
     <p>&copy; 2025 All rights reserved</p>
 </footer>
