--- a/About.html
+++ b/About.html
@@ -101,14 +101,36 @@
 
         /* VISION, MISSION, SERVICES */
         .section-title {
-            font-size: 1.5em;
+            font-size: 1.8em;
             color: #00BFFF;
             margin-top: 40px;
+            text-transform: uppercase;
+            font-weight: bold;
         }
 
         .section-content {
             margin-top: 20px;
             text-align: left;
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+
+        .section-content ul {
+            list-style-type: square;
+            padding-left: 20px;
+        }
+
+        .section-content img {
+            max-width: 100%;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .section-content h4 {
+            font-size: 1.5em;
+            color: #00BFFF;
+            margin-bottom: 10px;
         }
 
         /* FOOTER */
@@ -181,7 +203,8 @@
     <div class="section-content">
         <h4>Visi</h4>
         <p>Menjadi perpustakaan yang berorientasi pada pengembangan ilmu pengetahuan dan teknologi melalui layanan informasi yang cepat, akurat, dan berbasis digital.</p>
-
+        <img src="https://www.pexels.com/photo/a-modern-library-with-books-1505101/" alt="Visi Perpustakaan">
+        
         <h4>Misi</h4>
         <ul>
             <li>Menyediakan layanan informasi yang mudah diakses oleh seluruh mahasiswa dan masyarakat umum.</li>
@@ -193,14 +216,22 @@
     <!-- Layanan Perpustakaan -->
     <div class="section-title">Layanan Perpustakaan</div>
     <div class="section-content">
-        <ul>
-            <li><strong>Peminjaman Buku:</strong> Layanan peminjaman buku untuk mahasiswa dan staf pengajar.</li>
-            <li><strong>Ruangan Baca:</strong> Area nyaman untuk membaca buku dan melakukan penelitian.</li>
-            <li><strong>Penggunaan Komputer dan Internet:</strong> Fasilitas komputer dengan akses internet untuk mencari informasi ilmiah.</li>
-            <li><strong>Perpustakaan Digital:</strong> Koleksi buku dan jurnal digital yang dapat diakses secara online.</li>
-        </ul>
-    </div>
+        <h4>Peminjaman Buku</h4>
+        <img src="https://www.pexels.com/photo/a-library-with-books-and-computers-1579721/" alt="Peminjaman Buku">
+        <p>Layanan peminjaman buku untuk mahasiswa dan staf pengajar. Buku dapat dipinjam untuk jangka waktu tertentu sesuai dengan ketentuan perpustakaan.</p>
 
+        <h4>Ruangan Baca</h4>
+        <img src="https://www.pexels.com/photo/modern-library-1370293/" alt="Ruangan Baca">
+        <p>Area nyaman untuk membaca buku dan melakukan penelitian. Ruang baca yang tenang dan teratur untuk kenyamanan pengunjung.</p>
+
+        <h4>Penggunaan Komputer dan Internet</h4>
+        <img src="https://www.pexels.com/photo/a-person-using-a-laptop-in-a-library-3760743/" alt="Penggunaan Komputer dan Internet">
+        <p>Fasilitas komputer dengan akses internet untuk mencari informasi ilmiah, jurnal, dan referensi online yang mendukung penelitian.</p>
+
+        <h4>Perpustakaan Digital</h4>
+        <img src="https://www.pexels.com/photo/close-up-photography-of-books-and-laptop-3775068/" alt="Perpustakaan Digital">
+        <p>Koleksi buku dan jurnal digital yang dapat diakses secara online. Memudahkan mahasiswa dalam mengakses bahan bacaan kapan saja dan di mana saja.</p>
+    </div>
 </div>
 
 <footer>
