--- a/About.html
+++ b/About.html
@@ -241,7 +241,7 @@
 
         <div class="service">
             <h4>5. Layanan Bimbingan Pemustaka</h4>
-            <img src="https://www.lib.umd.edu/sites/default/files/styles/4_3_960w/public/2021-01/ResearchHelpDesk.jpg" alt="Layanan Bimbingan">
+            <img src="https://res.cloudinary.com/dwa2jqgtp/image/upload/v1746440568/20eee38c77b94225d3871e2f2eb4762a_phc1kb.jpg"Layanan Bimbingan">
             <p>Perpustakaan memberikan layanan edukatif berupa bimbingan cara menelusur informasi, penggunaan katalog online (OPAC), serta pelatihan penggunaan database ilmiah. Layanan ini bertujuan meningkatkan literasi informasi dan kemandirian belajar mahasiswa.</p>
         </div>
     </div>
