--- a/About.html
+++ b/About.html
@@ -219,13 +219,13 @@
     </table>
 
    <!-- VISI DAN MISI -->
-<div class="section-title">Visi dan Misi Perpustakaan</div>
+<div class="section-title"><h3>Visi dan Misi Perpustakaan</h3></div>
 <div class="section-content mission-vision-section">
 
     <!-- VISI -->
     <div class="vision-box">
         <i class="fas fa-eye icon-vision"></i>
-        <h4>Visi</h4>
+           <h4><i class="fas fa-bullseye"></i> Visi</h4>
         <p>
             Menjadi perpustakaan yang berorientasi pada pengembangan ilmu pengetahuan dan teknologi 
             melalui layanan informasi yang cepat, akurat, dan berbasis digital.
@@ -259,7 +259,7 @@
 </div>
 
      <!-- Layanan Perpustakaan -->
-    <div class="section-title">Layanan Perpustakaan</div>
+    <div class="section-title"><h3>Layanan Perpustakaan</h3>/div>
     <div class="section-content">
         <div class="service">
             <h4>1. Layanan Sirkulasi</h4>
