--- a/About.html
+++ b/About.html
@@ -259,7 +259,7 @@
 </div>
 
      <!-- Layanan Perpustakaan -->
-    <div class="section-title"><h3>Layanan Perpustakaan</h3>/div>
+    <div class="section-title"><h3>Layanan Perpustakaan</h3>
     <div class="section-content">
         <div class="service">
             <h4>1. Layanan Sirkulasi</h4>
